<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ricardoguzman.puppy.AboutActivity">

    <include android:id="@+id/miActionBar3"
        layout="@layout/actionbar">
    </include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textView4"
        android:text="@string/nombreDev"
        android:textSize="18sp"
        android:layout_below="@+id/titleAbout"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/nombreDev"
        android:text="@string/edadDev"
        android:textSize="18sp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textView5"
        android:text="@string/ciudadDev"
        android:textSize="18sp"
        android:layout_below="@+id/nombreDev"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/textView3"
        android:text="@string/ocupacionDev"
        android:textSize="18sp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleAbout"
        android:text="@string/acercaDe"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/miActionBar3"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
