<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ricardoguzman.puppy.ContactoActivity">


    <include android:id="@+id/miActionBar2"
        layout="@layout/actionbar">
    </include>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_below="@id/miActionBar2"
        >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topFormulario">

        <EditText
            android:id="@+id/etNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nombreCompleto"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topFormulario">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topFormulario">

        <EditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="text|textMultiLine"
            android:hint="@string/mensaje"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/enviaComentario"
        android:onClick="enviaMail"/>

    </LinearLayout>


</RelativeLayout>
